[package]
name = "republisher_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rclrs = "*"
std_msgs = "*"
px4_msgs = "*"
rosidl_runtime_rs = "*"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.62"
anyhow = "1.0.86"
trajectory = "0.1.0"
nalgebra = "0.32.0"
s_curve = "0.1.7"
itertools = "0.13.0"
trajgen = { version = "0.1.1", path = "../trajgen" }
