[package]
name = "singularity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rclrs = "*"
std_msgs = "*"
px4_msgs = "*"
rosidl_runtime_rs = "*"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.62"
anyhow = "1.0.86"
nalgebra = "0.33.0"
s_curve = "0.1.7"
itertools = "0.13.0"
serde = "1.0"
argus_common = { version = "*", path = "../argus_common" }
postcard = { version = "1.0", features = ["alloc"] }
futures-util = "0.3.30"
zenoh = { version = "1.0.0", features = ["unstable"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
